Add dns and static website stacks for beta, gamma, and prod

--- a/package.json
+++ b/package.json
@@ -1,21 +1,22 @@
 {
-  "name": "clhaskell_cdk",
+  "name": "clhaskell-website-cdk",
   "version": "0.1.0",
   "bin": {
-    "clhaskell_cdk": "bin/clhaskell_cdk.js"
+    "clhaskell-website": "dist/bin/app.js"
   },
   "scripts": {
     "build": "tsc",
     "watch": "tsc -w",
     "test": "jest",
-    "cdk": "cdk"
+    "cdk": "cdk --profile gamma-admin"
   },
   "devDependencies": {
     "@types/jest": "^29.5.14",
     "@types/node": "22.7.9",
+    "aws-cdk": "2.1013.0",
+    "dotenv": "^17.2.3",
     "jest": "^29.7.0",
     "ts-jest": "^29.2.5",
-    "aws-cdk": "2.1013.0",
     "ts-node": "^10.9.2",
     "typescript": "~5.6.3"
   },
