--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,11 +19,13 @@
     "inlineSources": true,
     "experimentalDecorators": true,
     "strictPropertyInitialization": false,
+    "outDir": "dist",
     "typeRoots": [
       "./node_modules/@types"
     ]
   },
   "exclude": [
+    "dist",
     "node_modules",
     "cdk.out"
   ]
